--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -11,7 +11,9 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     background-color: lightgreen;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
 /* Provide sufficient contrast against white background */
 a {
   color: blue;
