Added bootstrap style in the _Layout page and site.css

--- a/Views/Candles/Index.cshtml
+++ b/Views/Candles/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<CelestialCandle.Models.Candle>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Radiance";
 }
 
 <h1>Index</h1>
