--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="text-center text-success">
+    <h1 class="display-4">We Bring Light in Your Life!</h1>
+    <p><a href="https://en.wikipedia.org/wiki/Candle">Learn More about Candle</a>.</p>
 </div>
