--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,6 @@
 
 <div class="text-center text-success">
     <h1 class="display-4">We Bring Light in Your Life!</h1>
+    <p>We are the For a candle to burn, a heat source (commonly a naked flame from a match or lighter) is used to light the candle's wick, which melts and vaporizes a small amount of fuel (the wax). Once vaporized, the fuel combines with oxygen in the atmosphere to ignite and form a constant flame. This flame provides sufficient heat to keep the candle burning via a self-sustaining chain of events: the heat of the flame melts the top of the mass of solid fuel; the liquefied fuel then moves upward through the wick via capillary action; the liquefied fuel finally vaporizes to burn within the candle's flame.</p>
     <p><a href="https://en.wikipedia.org/wiki/Candle">Learn More about Candle</a>.</p>
 </div>
