Added  the Rating property and added styling to the css

--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -3,5 +3,13 @@
 }
 <h1>@ViewData["AboutUs"]</h1>
 
-<p>For a candle to burn, a heat source (commonly a naked flame from a match or lighter) is used to light the candle's wick, which melts and vaporizes a small amount of fuel (the wax). Once vaporized, the fuel combines with oxygen in the atmosphere to ignite and form a constant flame. This flame provides sufficient heat to keep the candle burning via a self-sustaining chain of events: the heat of the flame melts the top of the mass of solid fuel; the liquefied fuel then moves upward through the wick via capillary action; the liquefied fuel finally vaporizes to burn within the candle's flame..</p>
+<p>
+    Welcome to our Celestial Candle, where our passion for radiance beauty, and heavenly fragrances comes alive! We were founded in 2020 during the pandemic and we are a closely tied group of four dedicated teams. Our vision is to illuminate lives with CANDLES that not only light up your room but also your inner spiritual and emotional, memories and dreams.</p>
+    <p><em>Our Candle Crafting:</em>
+    Each of our Candle is a labor of love. Starting from selecting the finest ingredients and highest quality maintained for every wick, wax, and fragrance meets our highest standards. As a small team, we put all our love and efforts and promise to bring joy and happiness in our user life.</p>
+   <p> <em>Our Ability:</em>
+    At Celestial Candle, we are committed to bringing heavenly joy to our users at the same time we keep eco-friendly our product within the reach of everyone. we are a family, bound by our love for craftsmanship and the stories that each flame tells</p>
+   <p> <em>Join Our Incredible Journey:</em>
+    We invite you to be part of our journey. Light a Celestial candle and lets its beautiful fragrance take you on a journey- whether it’s a trip down memory lane, a moment of peace after a long day or an adventure waiting to unfold.</p>
+    
 
