--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,10 +20,18 @@ a.navbar-brand {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    background-color: snow;
+    background-color:beige;
+    background-image: src('Images/background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+
+
 p{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Poppins-Regular', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size:medium;
+    padding:initial;
 }
 
 .display-4{
