Updated the style and Text of About Us, Home and Privacy pages and add Images

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,10 @@
 }
 
 <div class="text-center text-success">
-    <h1 class="display-4">We Bring Light in Your Life!</h1>
-    <p>We are the For a candle to burn, a heat source (commonly a naked flame from a match or lighter) is used to light the candle's wick, which melts and vaporizes a small amount of fuel (the wax). Once vaporized, the fuel combines with oxygen in the atmosphere to ignite and form a constant flame. This flame provides sufficient heat to keep the candle burning via a self-sustaining chain of events: the heat of the flame melts the top of the mass of solid fuel; the liquefied fuel then moves upward through the wick via capillary action; the liquefied fuel finally vaporizes to burn within the candle's flame.</p>
-    <p><a href="https://en.wikipedia.org/wiki/Candle">Learn More about Candle</a>.</p>
+    <h1 class="display-4">
+        <img src="~/css/Images/background.jpg" />
+    </h1>
+    <h2><i>We Bring Light in Your Life!</i> </h2>
+    <p>Founded in 2020, Celestial Candle Co. is an artisanal candle company that crafts not just candles, but sensory experiences. Drawing inspiration from nature, literature, and the intangible, each candle represents a story waiting to be unveiled. Located in the heart of Windsor, ON, the company thrives on a blend of traditional craftsmanship and innovative techniques to ensure every product is a work of art..</p>
+    <p><a href="https://en.wikipedia.org/wiki/Candle">Learn More about Candle</a></p>
 </div>
