--- a/Views/Home/AboutUs.cshtml
+++ b/Views/Home/AboutUs.cshtml
@@ -2,14 +2,36 @@
     ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["AboutUs"]</h1>
-
+<div></div>
+<br />
 <p>
-    Welcome to our Celestial Candle, where our passion for radiance beauty, and heavenly fragrances comes alive! We were founded in 2020 during the pandemic and we are a closely tied group of four dedicated teams. Our vision is to illuminate lives with CANDLES that not only light up your room but also your inner spiritual and emotional, memories and dreams.</p>
-    <p><em>Our Candle Crafting:</em>
-    Each of our Candle is a labor of love. Starting from selecting the finest ingredients and highest quality maintained for every wick, wax, and fragrance meets our highest standards. As a small team, we put all our love and efforts and promise to bring joy and happiness in our user life.</p>
-   <p> <em>Our Ability:</em>
-    At Celestial Candle, we are committed to bringing heavenly joy to our users at the same time we keep eco-friendly our product within the reach of everyone. we are a family, bound by our love for craftsmanship and the stories that each flame tells</p>
-   <p> <em>Join Our Incredible Journey:</em>
-    We invite you to be part of our journey. Light a Celestial candle and lets its beautiful fragrance take you on a journey- whether it’s a trip down memory lane, a moment of peace after a long day or an adventure waiting to unfold.</p>
-    
 
+    <img src="~/css/Images/can4.jpg" width="150px" hight="150px" />
+
+
+    Welcome to our Celestial Candle, where our passion for radiance beauty, and heavenly fragrances comes alive! We were founded in 2020 during the pandemic and we are a closely tied group of four dedicated teams. Our vision is to illuminate lives with CANDLES that not only light up your room but also your inner spiritual and emotional, memories and dreams.
+</p>
+<img src="~/css/Images/can3.jpg" width="150px" hight="150px" />
+<p>
+    <em>Our Candle Crafting:</em><br />
+    Each of our Candle is a labor of love. Starting from selecting the finest ingredients and highest quality maintained for every wick, wax, and fragrance meets our highest standards. As a small team, we put all our love and efforts and promise to bring joy and happiness in our user life.
+</p>
+
+<img src="~/css/Images/can5.jpg" width="150px" hight="150px" />
+<p>
+    <em>Our Ability:</em><br />
+    At Celestial Candle, we are committed to bringing heavenly joy to our users at the same time we keep eco-friendly our product within the reach of everyone. we are a family, bound by our love for craftsmanship and the stories that each flame tells
+</p>
+
+    <img src="~/css/Images/candle1.jpg" width="150px" hight="150px" />
+<p>
+    <em>Join Our Incredible Journey:</em><br />
+    We invite you to be part of our journey. Light a Celestial candle and lets its beautiful fragrance take you on a journey- whether it’s a trip down memory lane, a moment of peace after a long day or an adventure waiting to unfold.
+</p>
+<br />
+<p>
+    Dristi Khondkar, CEO <br />
+    Maria Tahir, PM <br />
+    Rayana Von,  <br />
+    Peter Otul, Employee
+</p>
