--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,6 +27,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Candle" asp-action="Index">Candles</a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -40,7 +43,7 @@
 
     <footer class="border-top footer text-capitalize">
         <div class="container">
-            &copy; @DateTime.Now.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss") - Celestial Candle - <a asp-area="" asp-controller="Home" asp-action="Privacy">About Us</a>
+            &copy; @DateTime.Now.ToString("yyyy'-'MM'-'dd'T'HH':'mm':'ss") - Celestial Candle - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
