--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,8 @@
     ViewData["Title"] = "Home Page";
 }
 
+@Html.ActionLink("View All Products", "AllProducts", "Products")
+
 <div class="text-center text-success">
     <h1 class="display-4">
         <img src="~/css/Images/background.jpg" />
