--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,7 +17,7 @@ a.navbar-brand {
   word-break: break-all;
 }
 div{
-    background-color: gold;
+    background-color: aqua;
 }
 body {
     /* Margin bottom by footer height */
@@ -37,6 +37,7 @@ p {
     font-family: 'Poppins-Regular', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: medium;
     padding: initial;
+    color:black;
 }
 
 .display-4{
