updating the database pages layout design

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,6 +6,12 @@
     <title>@ViewData["Title"] - Celestial Candle</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <style>
+        .row {
+            font-size: medium;
+            color: darkred;
+        }
+    </style>
 </head>
 <body>
     <header>
