--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,7 +17,7 @@ a.navbar-brand {
   word-break: break-all;
 }
 div{
-    background-color: aqua;
+    background-color: lightcyan;
 }
 body {
     /* Margin bottom by footer height */
